<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/attribute"
    android:clickable="true"
    android:focusable="false"
    android:orientation="vertical">

    <TextView
        style="@style/TextEdit"
        android:text="@string/package_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_dropdown_custom"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/container_packages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <Spinner
                android:id="@+id/metadata_package_1"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_dropdown_custom"
                android:dropDownVerticalOffset="35dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="/"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/metadata_package_2"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_dropdown_custom"
                android:dropDownVerticalOffset="35dp"
                android:spinnerMode="dropdown" />

            <ImageButton
                android:id="@+id/btn_add_packages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:src="@android:drawable/ic_input_add" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextEdit"
        android:text="@string/urgency_text" />

    <Spinner
        android:id="@+id/metadata_urgency"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_dropdown_custom"
        android:dropDownVerticalOffset="35dp"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/distribution_text"/>

    <Spinner
        android:id="@+id/metadata_distribution"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_dropdown_custom"
        android:dropDownVerticalOffset="35dp"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/language_text"/>

    <Spinner
        android:id="@+id/metadata_language"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_dropdown_custom"
        android:dropDownVerticalOffset="35dp"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/keyword_text"/>

    <EditText
        android:id="@+id/metadata_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/keyword_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/iptc_text"/>

    <Spinner
        android:id="@+id/metadata_iptc"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_dropdown_custom"
        android:dropDownVerticalOffset="35dp"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/author_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_dropdown_custom"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/container_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/metadata_author_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_edittext"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/metadata_author_spinner"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:background="@drawable/spinner_dropdown_custom"
                android:dropDownVerticalOffset="35dp"
                android:spinnerMode="dropdown" />

            <ImageButton
                android:id="@+id/btn_add_authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:src="@android:drawable/ic_input_add" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextEdit"
        android:text="@string/label_text"/>

    <EditText
        android:id="@+id/metadata_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/label_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/status_text"/>

    <Spinner
        android:id="@+id/metadata_status"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_dropdown_custom"
        android:dropDownVerticalOffset="35dp"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/city_text"/>

    <EditText
        android:id="@+id/metadata_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/city_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/country_text"/>

    <EditText
        android:id="@+id/metadata_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/country_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/editorial_text"/>

    <EditText
        android:id="@+id/metadata_editorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/editorial_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/info_text"/>

    <EditText
        android:id="@+id/metadata_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/info_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/credit_text"/>

    <EditText
        android:id="@+id/metadata_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/credit_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/source_text"/>

    <EditText
        android:id="@+id/metadata_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/source_text"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="12sp" />

    <TextView
        style="@style/TextEdit"
        android:text="@string/comment_text"/>

    <EditText
        android:id="@+id/metadata_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_edittext"
        android:hint="@string/comment_text"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="12sp" />

</LinearLayout>