<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viking"
    android:clickable="true"
    android:focusable="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.widget.Toolbar
            android:id="@+id/signin_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:elevation="@null"
            android:theme="@style/AppTheme"
            android:tint="@android:color/white">

            <be.belga.reporter.mobile.views.IconTextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_icon"
                android:textColor="@color/rose_white"
                android:textSize="15dp" />

        </android.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/title_forgot_password_black"
                android:textColor="@color/bright_grey"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/title_forgot_password_white"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title_forgot_password_detail"
            android:textAlignment="center"
            android:textColor="@color/powder_blue"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/viking"
            android:text="@string/send_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/navigation_bottom_img" />

</RelativeLayout>