<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_generic"
    android:clickable="true"
    android:focusable="false">

    <RelativeLayout
        android:id="@+id/rl_login_img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/viking">

        <android.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:elevation="@null"
            android:theme="@style/AppTheme"
            android:tint="@android:color/white">

            <be.belga.reporter.mobile.views.IconTextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_icon"
                android:textColor="@color/rose_white"
                android:textSize="15dp" />

        </android.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_toolbar"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/title_change_password_black"
                android:textColor="@color/bright_grey"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/title_change_password_white"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login_img"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/white_round_corners_filled"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edittext_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/old_password"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <be.belga.reporter.mobile.views.IconTextView
                    android:id="@+id/tv_show_old_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:text="@string/show_password_icon"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edittext_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/new_password"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <be.belga.reporter.mobile.views.IconTextView
                    android:id="@+id/tv_show_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:text="@string/show_password_icon"
                    android:textSize="18sp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edittext_confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_new_password"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/apply"
                android:textColor="@color/carrot_orange"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/navigation_bottom_img" />

</RelativeLayout>